--- a/src/main/resources/view/order_form.fxml
+++ b/src/main/resources/view/order_form.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="AnchorpaneOrder" prefHeight="790.0" prefWidth="1008.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.OrderFormController">
+<AnchorPane fx:id="AnchorpaneOrder" prefHeight="719.0" prefWidth="1019.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.OrderFormController">
    <children>
       <Label layoutX="394.0" layoutY="20.0" text="Order Form">
          <font>
@@ -29,7 +30,6 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Text>
-      <TextField fx:id="txtCustId" layoutX="424.0" layoutY="153.0" prefHeight="34.0" prefWidth="243.0" />
       <Text layoutX="736.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date Of  Place">
          <font>
             <Font name="System Bold" size="14.0" />
@@ -41,7 +41,6 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Text>
-      <TextField fx:id="txtPayId" layoutX="209.0" layoutY="239.0" prefHeight="34.0" prefWidth="243.0" />
       <Text layoutX="546.0" layoutY="233.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date Of  Release">
          <font>
             <Font name="System Bold" size="14.0" />
@@ -105,5 +104,7 @@
             <TableColumn fx:id="colDateOfRelease" prefWidth="198.0" text="Date Of Release" />
         </columns>
       </TableView>
+      <JFXComboBox fx:id="comCustId" layoutX="424.0" layoutY="153.0" onAction="#comCusIdOnAction" prefHeight="34.0" prefWidth="243.0" />
+      <JFXComboBox fx:id="comPayId" layoutX="206.0" layoutY="240.0" onAction="#comPayIdOnAction" prefHeight="34.0" prefWidth="243.0" />
    </children>
 </AnchorPane>
