--- a/src/main/resources/view/batchIngredientDetail_form.fxml
+++ b/src/main/resources/view/batchIngredientDetail_form.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="719.0" prefWidth="1019.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.BatchIngredientDetailFormController">
    <children>
       <Label layoutX="358.0" layoutY="25.0" text="Batch Ingredient Details">
@@ -36,7 +35,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField layoutX="419.0" layoutY="223.0" prefHeight="24.0" prefWidth="208.0" />
+      <TextField fx:id="txtIngId" layoutX="419.0" layoutY="223.0" prefHeight="24.0" prefWidth="208.0" />
       <JFXButton buttonType="RAISED" layoutX="841.0" layoutY="294.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #03a9f4;" text="Save">
          <font>
             <Font name="System Bold" size="13.0" />
