--- a/src/main/resources/view/batch_form.fxml
+++ b/src/main/resources/view/batch_form.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -30,13 +31,11 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtStoId" layoutX="405.0" layoutY="138.0" prefHeight="29.0" prefWidth="209.0" />
       <Text layoutX="695.0" layoutY="133.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ORD ID" wrappingWidth="59.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtOrdId" layoutX="695.0" layoutY="138.0" prefHeight="29.0" prefWidth="209.0" />
       <Text layoutX="106.0" layoutY="201.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type" wrappingWidth="59.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
@@ -120,5 +119,7 @@
             <TableColumn fx:id="colQty" prefWidth="106.0" text="Qty" />
         </columns>
       </TableView>
+      <JFXComboBox fx:id="comStoId" layoutX="408.0" layoutY="136.0" onAction="#comStoIdOnAction" prefHeight="29.0" prefWidth="209.0" />
+      <JFXComboBox fx:id="comOrdId" layoutX="695.0" layoutY="136.0" onAction="#comOrdIdOnAction" prefHeight="29.0" prefWidth="209.0" />
    </children>
 </AnchorPane>
