--- a/src/main/resources/view/batch_form.fxml
+++ b/src/main/resources/view/batch_form.fxml
@@ -20,46 +20,46 @@
             <Font name="System Bold" size="33.0" />
          </font>
       </Label>
-      <Text layoutX="106.0" layoutY="133.0" strokeType="OUTSIDE" strokeWidth="0.0" text="BAT ID" wrappingWidth="59.7294921875">
+      <Text layoutX="106.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="BAT ID" wrappingWidth="59.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtBatId" layoutX="106.0" layoutY="138.0" onAction="#txtSearchOnAction" prefHeight="29.0" prefWidth="209.0" />
-      <Text layoutX="406.0" layoutY="133.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STO ID" wrappingWidth="59.7294921875">
+      <TextField fx:id="txtBatId" layoutX="106.0" layoutY="96.0" onAction="#txtSearchOnAction" prefHeight="29.0" prefWidth="209.0" />
+      <Text layoutX="406.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STO ID" wrappingWidth="59.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <Text layoutX="695.0" layoutY="133.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ORD ID" wrappingWidth="59.7294921875">
+      <Text layoutX="695.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ORD ID" wrappingWidth="59.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <Text layoutX="106.0" layoutY="201.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type" wrappingWidth="59.7294921875">
+      <Text layoutX="699.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type" wrappingWidth="59.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <ChoiceBox fx:id="choiceType" layoutX="106.0" layoutY="208.0" prefHeight="24.0" prefWidth="180.0" />
-      <Text layoutX="406.0" layoutY="201.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Production Date" wrappingWidth="131.7294921875">
+      <ChoiceBox fx:id="choiceType" layoutX="699.0" layoutY="228.0" prefHeight="24.0" prefWidth="180.0" />
+      <Text layoutX="406.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Production Date" wrappingWidth="131.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <Text layoutX="695.0" layoutY="201.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Num Of Rejected Item" wrappingWidth="170.7294921875">
+      <Text layoutX="695.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Num Of Rejected Item" wrappingWidth="170.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtProductionDate" layoutX="405.0" layoutY="207.0" prefHeight="29.0" prefWidth="209.0" />
-      <TextField fx:id="txtNumOfReject" layoutX="695.0" layoutY="207.0" prefHeight="29.0" prefWidth="209.0" />
-      <Text layoutX="405.0" layoutY="272.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qty" wrappingWidth="170.7294921875">
+      <TextField fx:id="txtProductionDate" layoutX="405.0" layoutY="163.0" prefHeight="29.0" prefWidth="209.0" />
+      <TextField fx:id="txtNumOfReject" layoutX="695.0" layoutY="163.0" prefHeight="29.0" prefWidth="209.0" />
+      <Text layoutX="405.0" layoutY="217.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qty" wrappingWidth="170.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtQty" layoutX="405.0" layoutY="278.0" prefHeight="29.0" prefWidth="209.0" />
+      <TextField fx:id="txtQty" layoutX="405.0" layoutY="223.0" prefHeight="29.0" prefWidth="209.0" />
       <JFXButton buttonType="RAISED" layoutX="849.0" layoutY="338.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #03a9f4;" text="Save">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
@@ -119,7 +119,19 @@
             <TableColumn fx:id="colQty" prefWidth="106.0" text="Qty" />
         </columns>
       </TableView>
-      <JFXComboBox fx:id="comStoId" layoutX="408.0" layoutY="136.0" onAction="#comStoIdOnAction" prefHeight="29.0" prefWidth="209.0" />
-      <JFXComboBox fx:id="comOrdId" layoutX="695.0" layoutY="136.0" onAction="#comOrdIdOnAction" prefHeight="29.0" prefWidth="209.0" />
+      <JFXComboBox fx:id="comStoId" layoutX="408.0" layoutY="92.0" onAction="#comStoIdOnAction" prefHeight="29.0" prefWidth="209.0" />
+      <JFXComboBox fx:id="comOrdId" layoutX="695.0" layoutY="92.0" onAction="#comOrdIdOnAction" prefHeight="29.0" prefWidth="209.0" />
+      <TableView fx:id="tblEmp" layoutX="97.0" layoutY="178.0" prefHeight="200.0" prefWidth="227.0">
+        <columns>
+          <TableColumn fx:id="colEmpId" prefWidth="75.0" text="EmpId" />
+          <TableColumn fx:id="colFirstName" prefWidth="75.0" text="name" />
+            <TableColumn fx:id="colAction" prefWidth="75.0" text="Action" />
+        </columns>
+      </TableView>
+      <Label layoutX="97.0" layoutY="152.0" text="Employee Detail:">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
