--- a/src/main/resources/view/batch_form.fxml
+++ b/src/main/resources/view/batch_form.fxml
@@ -121,11 +121,12 @@
       </TableView>
       <JFXComboBox fx:id="comStoId" layoutX="408.0" layoutY="92.0" onAction="#comStoIdOnAction" prefHeight="29.0" prefWidth="209.0" />
       <JFXComboBox fx:id="comOrdId" layoutX="695.0" layoutY="92.0" onAction="#comOrdIdOnAction" prefHeight="29.0" prefWidth="209.0" />
-      <TableView fx:id="tblEmp" layoutX="97.0" layoutY="178.0" prefHeight="200.0" prefWidth="227.0">
+      <TableView fx:id="tblEmp" layoutX="71.0" layoutY="178.0" prefHeight="200.0" prefWidth="299.0">
         <columns>
           <TableColumn fx:id="colEmpId" prefWidth="75.0" text="EmpId" />
           <TableColumn fx:id="colFirstName" prefWidth="75.0" text="name" />
             <TableColumn fx:id="colAction" prefWidth="75.0" text="Action" />
+            <TableColumn fx:id="colAction11" prefWidth="75.0" text="Action" />
         </columns>
       </TableView>
       <Label layoutX="97.0" layoutY="152.0" text="Employee Detail:">
