--- a/src/main/resources/view/payment_form.fxml
+++ b/src/main/resources/view/payment_form.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -105,6 +106,6 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtOrdId" layoutX="384.0" layoutY="281.0" prefHeight="29.0" prefWidth="223.0" />
+      <JFXComboBox fx:id="comOrd" layoutX="387.0" layoutY="269.0" prefHeight="29.0" prefWidth="223.0" />
    </children>
 </AnchorPane>
