--- a/src/main/resources/view/dashBoard_form.fxml
+++ b/src/main/resources/view/dashBoard_form.fxml
@@ -53,7 +53,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <JFXButton buttonType="RAISED" layoutX="120.0" layoutY="369.0" onAction="#btnDashBoard1OnAction" prefHeight="105.0" prefWidth="133.0" style="-fx-background-color: #e25a87;" text="DashBoard">
+      <JFXButton buttonType="RAISED" layoutX="120.0" layoutY="369.0" onAction="#btnBatchCostOnAction" prefHeight="105.0" prefWidth="133.0" style="-fx-background-color: #e25a87;" text="BatchCost">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
